Make fixes to height on tablet sizes and increase width of sorter

--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -161,7 +161,7 @@
 
   &__input,
   &__select {
-    width: 22rem;
+    width: 27rem;
     background-color: var(--color-vote-button-background);
     border: none;
     border-radius: 10rem;
