--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -19,6 +19,7 @@
 
     @media only screen and (max-width: base.$bp-small) {
       grid-template-columns: 1fr;
+      height: auto;
     }
   }
 }
